--- a/private/src/AzureSatori/SatoriPortal/views/layout.jade
+++ b/private/src/AzureSatori/SatoriPortal/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    script(src='/javascripts/angular.min.js')
   body
     block content
