--- a/private/src/AzureSatori/SatoriPortal/views/layout.ejs
+++ b/private/src/AzureSatori/SatoriPortal/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <title>Satori Portal Home</title>
+    <title><%= title %></title>
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
     <script src="/javascript/angular.min.js"></script>
 </head>
