ejs render refine

--- a/private/src/AzureSatori/SatoriPortal/views/layout.ejs
+++ b/private/src/AzureSatori/SatoriPortal/views/layout.ejs
@@ -71,7 +71,7 @@
                                 </svg>
                             </div>
                         </li>
-                        <li><a href="#"><%= user %></a></li>
+                        <li><a href="#"><%= displayName %></a></li>
                     </ul>
                 </div>
             </div>
