layout: add onloadScript var

--- a/src/AzureCloudService/WebRole1/views/layout.ejs
+++ b/src/AzureCloudService/WebRole1/views/layout.ejs
@@ -117,12 +117,11 @@
             </div>
         </nav>
     </div>
-    <div class="sp-content">
-        <%- block_content %>
-    </div>
+    <div class="sp-content"><%-block_content %></div>
     <span id="sp-hidden-data-id" style="display: none"><%- model %></span>
     <% footerScripts.forEach(function(s){ %>
     <script src="<%= s %>"></script>
     <% }); %>
+    <script><%- onloadScript %></script>
 </body>
 </html>
